# cornell-notes

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md
backend/: .env.example  README.md  __init__.py  pyproject.toml  requirements.txt  start.sh  test_config.py
backend/alembic/: env.py
backend/alembic/versions/: add_explore_conversations.py  add_mindmap_data.py  add_mindmap_data.sql
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  ai.py  auth.py  conversations.py  notebooks.py  notes.py
backend/app/api/v1/schemas/: __init__.py  ai.py  conversation.py  note.py  notebook.py  user.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  cornell_note.py  explore_conversation.py  note_content.py  notebook.py  user.py
backend/scripts/: migrate_add_mindmap.py
design/: LOGO_README.md  README.md  logo-preview.html
design/prototypes/: README.md  功能模块与用户流程.md  原型设计总结与Figma指南.md  页面原型框架与设计规范.md
docker/: .dockerignore  .env.example  README.md  backend.Dockerfile  build.bat  build.sh  deploy.bat  deploy.sh  docker-compose.yml  frontend.Dockerfile  nginx.conf  push.bat  push.sh
docs/: README.md
docs/product-design/: README.md  markdown还是富文本.md  program.md  原型规范.md  核心功能清单.md
docs/system-design/: README.md  api-design.md  backend-architecture.md  data-model.md  frontend-architecture.md
docs/user-guide/: 编辑器使用教程.md
frontend/: .gitkeep  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+80 files in other folders)
